<resources>
    <string name="app_name">MPRadio Remote</string>
    <string name="title_activity_main4">Main Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MPRadio Bluetooth Remote</string>
    <string name="nav_header_subtitle">morrolinux.it</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="connecting">Connecting… \nmake sure the device is on and within reach.</string>
    <string name="now_playing">Now Playing</string>
    <string name="system">System:</string>
    <string name="restart">RESTART</string>
    <string name="switch_to">Switch To</string>
    <string name="updates">Updates</string>
    <string name="settings">Settings</string>
    <string name="controls">Controls</string>
    <string name="download_updates">Download updates</string>
    <string name="mpradio_core" translatable="false">MPradio core</string>
    <string name="update_this_app">Update this app</string>
    <string name="pifmadv" translatable="false">PiFmAdv</string>
    <string name="download">Download</string>
    <string name="update">Update</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="apply_settings">Apply Settings</string>
    <string name="station">Station</string>
    <string name="treble">Treble</string>
    <string name="shuffle">Shuffle</string>
    <string name="gain">Gain</string>
    <string name="quick_actions">Quick actions</string>
    <string name="wi_fi_status">Wi-Fi:</string>
</resources>
